--- a/html-folder/devops.html
+++ b/html-folder/devops.html
@@ -13,6 +13,15 @@
      <!-- Add Bootstrap CSS link -->
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
      <link rel="stylesheet" href="/css-folder/home.css"> <!-- Custom CSS for centering the navigation bar -->
+     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
  
      <title>Service</title>
      <link rel="stylesheet" href="/css-folder/courses.css">
@@ -31,7 +40,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav mx-auto"> <!-- mx-auto class to center the items -->
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item dropdown" onmouseover="showDropdown()" onmouseout="hideDropdown()">
@@ -181,66 +190,71 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3">
-                <div class="card">
-                    <img src="/img/img1.png" alt="" class="card-img-top">
-                    <p class="text-center m-2"><b>The 1-on-1 Advantage</b></p>
-                    <div class="hide">
-                        <div class="card-body">
-                            Get 1-on-1 session with our expert
-                            trainers at a date & time of your convenience
+
+
+    <section>
+        <div class="container">
+            <div class="row mt-4 mb-5">
+                <div class="col-lg-3">
+                    <div class="card">
+                        <img src="/img/img1.png" alt="" class="card-img-top">
+                        <p class="text-center m-2"><b>Fully Hands-On IT Training</b></p>
+                        <!-- <div class="hide">
+                            <div class="card-body">
+                                Get 1-on-1 session with our expert
+                                trainers at a date & time of your convenience
+                            </div>
+                        </div> -->
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="card">
+                        <img src="/img/img2.png" alt="" class="card-img-top">
+                        <p class="text-center m-2"><b>30 to 40 Hours Live Project</b></p>
+                        <div class="hide">
+                            <!-- <div class="card-body">
+                                Start your session at a date of your
+                                choice-weekend & evening slots included,
+                                and reschedule if necessary.
+                            </div> -->
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-3">
-                <div class="card">
-                    <img src="/img/img2.png" alt="" class="card-img-top">
-                    <p class="text-center m-2"><b>Flexible Dates</b></p>
-                    <div class="hide">
-                        <div class="card-body">
-                            Start your session at a date of your
-                            choice-weekend & evening slots included,
-                            and reschedule if necessary.
+                <div class="col-lg-3">
+                    <div class="card">
+                        <img src="/img/img3.png" alt="" class="card-img-top">
+                        <p class="text-center m-2"><b>Unlimited Interview Calls</b></p>
+                        <div class="hide">
+                            <!-- <div class="card-body">
+                                Training never been so
+                                convenient-attend
+                                training sessions 4-hour
+                                long for easy learning.
+                            </div> -->
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-3">
-                <div class="card">
-                    <img src="/img/img3.png" alt="" class="card-img-top">
-                    <p class="text-center m-2"><b>4-Hour Sessions</b></p>
-                    <div class="hide">
-                        <div class="card-body">
-                            Training never been so
-                            convenient-attend
-                            training sessions 4-hour
-                            long for easy learning.
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3">
-                <div class="card">
-                    <img src="/img/img4.png" alt="" class="card-img-top">
-                    <p class="text-center m-2"><b>Destination Training</b></p>
-                    <div class="hide">
-                        <div class="card-body">
-                            Attend trainings at
-                            some of the most loved
-                            cities such as Dubai,
-                            London, Delhi(India),
-                            Goa, Singapore,
-                            New York and Sydney.
+                <div class="col-lg-3">
+                    <div class="card">
+                        <img src="/img/img4.png" alt="" class="card-img-top">
+                        <p class="text-center m-2"><b>100% Placements</b></p>
+                        <div class="hide">
+                            <!-- <div class="card-body">
+                                Attend trainings at
+                                some of the most loved
+                                cities such as Dubai,
+                                London, Delhi(India),
+                                Goa, Singapore,
+                                New York and Sydney.
+                            </div> -->
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <script src="index.js"></script>
+    </section>
+
+    
     <div class="container mb-5 mt-5" id="contact-form">
         <form>
             <h4 class="mt-4 mb-5" style="text-align: center;">Request More Information</h4>
