--- a/html-folder/java.html
+++ b/html-folder/java.html
@@ -4,7 +4,8 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css"
@@ -16,12 +17,22 @@
 
     <title>Service</title>
     <link rel="stylesheet" href="/css-folder/courses.css">
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <section class="container-fluid bg-light">
+    <section class="container-fluid bg-light" style="font-weight: 600; color: black;">
         <div class="container text-center"> <!-- Center the navigation bar -->
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="#">
                     <img src="/img/technohub.jpg" alt="technohub" width="100%" height="80px">
                 </a>
@@ -31,7 +42,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav mx-auto"> <!-- mx-auto class to center the items -->
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item dropdown" onmouseover="showDropdown()" onmouseout="hideDropdown()">
@@ -40,7 +51,7 @@
                                 Course Catalog
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="java.html">Java</a>
+                                <a class="dropdown-item" href="#">Java</a>
                                 <a class="dropdown-item" href="python.html">Python</a>
                                 <a class="dropdown-item" href="react.html">ReactJS</a>
                                 <a class="dropdown-item" href="nodejs.html">Node.JS</a>
@@ -57,10 +68,10 @@
                             </div>
                         </li>
                         <!-- <li class="nav-item">
-                            <a class="nav-link" href="index.html">Testing</a>
+                            <a class="nav-link" href="testing.html">Testing</a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact US</a>
+                            <a class="nav-link" href="#">Contact US</a>
                         </li>
                     </ul>
                 </div>
@@ -109,8 +120,8 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-1"></div>
-                <div class="col-lg-10 mt-5">
-                    <h2 class="mt-5 mb-3 text-primary" style="font-weight: bold;">Why Learn Java</h2>
+                <div class="col-lg-10 mt-2">
+                    <h2 class="mt-3 mb-3 text-primary" style="font-weight: bold;">Why Learn Java</h2>
                     <p class="mb-3">
                         learning Java is a valuable investment in your career as a software developer. Its widespread
                         use, versatility, cross-platform compatibility, and strong community support make it an
@@ -181,80 +192,45 @@
     </section>
 
 
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3">
-                <div class="card">
-                    <img src="/img/img1.png" alt="" class="card-img-top">
-                    <p class="text-center m-2"><b>The 1-on-1 Advantage</b></p>
-                    <div class="hide">
-                        <div class="card-body">
-                            Get 1-on-1 session with our expert
-                            trainers at a date & time of your convenience
-                        </div>
+    <section>
+        <div class="container">
+            <div class="row mt-4 mb-5">
+                <div class="col-lg-3">
+                    <div class="card">
+                        <img src="/img/img1.png" alt="" class="card-img-top">
+                        <p class="text-center m-2"><b>Fully Hands-On IT Training</b></p>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-3">
-                <div class="card">
-                    <img src="/img/img2.png" alt="" class="card-img-top">
-                    <p class="text-center m-2"><b>Flexible Dates</b></p>
-                    <div class="hide">
-                        <div class="card-body">
-                            Start your session at a date of your
-                            choice-weekend & evening slots included,
-                            and reschedule if necessary.
-                        </div>
+                <div class="col-lg-3">
+                    <div class="card">
+                        <img src="/img/img2.png" alt="" class="card-img-top">
+                        <p class="text-center m-2"><b>30 to 40 Hours Live Project</b></p>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-3">
-                <div class="card">
-                    <img src="/img/img3.png" alt="" class="card-img-top">
-                    <p class="text-center m-2"><b>4-Hour Sessions</b></p>
-                    <div class="hide">
-                        <div class="card-body">
-                            Training never been so
-                            convenient-attend
-                            training sessions 4-hour
-                            long for easy learning.
-                        </div>
+                <div class="col-lg-3">
+                    <div class="card">
+                        <img src="/img/img3.png" alt="" class="card-img-top">
+                        <p class="text-center m-2"><b>Unlimited Interview Calls</b></p>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-3">
-                <div class="card">
-                    <img src="/img/img4.png" alt="" class="card-img-top">
-                    <p class="text-center m-2"><b>Destination Training</b></p>
-                    <div class="hide">
-                        <div class="card-body">
-                            Attend trainings at
-                            some of the most loved
-                            cities such as Dubai,
-                            London, Delhi(India),
-                            Goa, Singapore,
-                            New York and Sydney.
-                        </div>
+                <div class="col-lg-3">
+                    <div class="card">
+                        <img src="/img/img4.png" alt="" class="card-img-top">
+                        <p class="text-center m-2"><b>100% Placements</b></p>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
 
-    <section class="" style="background-color: #f5f5dc;">
+    <section class="" style="background-color: #dfdfda;">
         <div class="Container">
-            <!-- <div class="row mb-3">
-                <div class="col-lg-5"></div>
-                <div class="col-lg-5">
-                  <h2 class="text-primary mt-4" style="font-weight: bold;"> AWS Course Syllabus</h2>
-                </div>
-              </div> -->
             <div class="row">
                 <h2 class="text-primary text-center mb-4 mt-4" style="font-weight: bold;">Java Course Syllabus</h2>
                 <div class="col-lg-2"></div>
-                <div class="col-lg-8 mb-3">
-                    <button class="accordion">  Introduction to Java</button>
+                <div class="col-lg-8 mb-5">
+                    <button class="accordion"> Introduction to Java</button>
                     <div class="panel">
                         <ol>
                             <li> Overview of Java and its features</li>
@@ -292,7 +268,7 @@
                             <li>Introduction to Java Collections Framework (List, Set, Map) </li>
                         </ol>
                     </div>
-                   <button class="accordion">Exception Handling</button>
+                    <button class="accordion">Exception Handling</button>
                     <div class="panel">
                         <ol>
                             <li>Handling runtime exceptions using try-catch blocks</li>
@@ -325,7 +301,7 @@
                             <li>Overview of commonly used classes and methods in the Java API</li>
                             <li>Exploring utility classes in packages like java.lang, java.util, etc. </li>
                         </ol>
-                    </div>         
+                    </div>
                 </div>
             </div>
         </div>
@@ -384,33 +360,6 @@
         </div>
     </footer>
 
-    <!-- <div class="container mb-5 mt-5" id="contact-form">
-        <form>
-            <h4 class="mt-4 mb-5" style="text-align: center;">Request More Information</h4>
-            <div class="row">
-                <div class="col-lg-6" id="contact-input">
-                    <input type="text" class="form-control" name="name" id="p1" placeholder="Name" />
-                    <input type="text" class="form-control" name="phone" id="p2" placeholder="Phone" />
-                    <input type="text" class="form-control" name="city" id="p3" placeholder="City (optional)" />
-                    <textarea name="textarea" class="form-control"
-                        placeholder="Enter Query\ Your Requirement :"></textarea>
-                </div>
-                <div class="col-lg-6" id="contact-input">
-                    <input type="email" class="form-control" name="email" id="p4" placeholder="Email" />
-                    <input type="text" class="form-control" name="contry" id="p5" placeholder="India" />
-                    <input type="checkbox" /> <label class="request"> Request a call back ?</label> <br>
-                    <div class="captcha">
-                        <div class="g-recaptcha" data-sitekey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"
-                            data-callback="onRecaptchaSuccess" data-expired-callback="onRecaptchaResponseExpiry"
-                            data-error-callback="onRecaptchaError">
-                        </div>
-                    </div>
-                </div>
-                <button id="submit-btn" class="btn btn-danger"
-                    onclick="sendEmail(); reset(); return false">submit</button>
-            </div>
-        </form>
-    </div> -->
 
     <!-- Add custom JavaScript -->
     <script>
