--- a/html-folder/testing.html
+++ b/html-folder/testing.html
@@ -14,6 +14,16 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css-folder/home.css"> <!-- Custom CSS for centering the navigation bar -->
 
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+
     <title>Service</title>
     <link rel="stylesheet" href="/css-folder/courses.css">
 </head>
@@ -31,7 +41,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav mx-auto"> <!-- mx-auto class to center the items -->
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item dropdown" onmouseover="showDropdown()" onmouseout="hideDropdown()">
@@ -57,7 +67,7 @@
                             </div>
                         </li>
                         <!-- <li class="nav-item">
-                            <a class="nav-link" href="#">Testing</a>
+                            <a class="nav-link" href="index.html">Testing</a>
                         </li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact US</a>
@@ -105,10 +115,33 @@
         </div>
     </section>
 
-    <div class="container">
+    <section style="background-color:#E0FFFF;">
+        <div class="container">
+            <div class="row mb-4">
+                <div class="col-md-8 mt-5 mb-5">
+                    <h2 class="mt-5" style="font-weight: bold;">Manual Testing Overview</h2>
+                    <p class="mt-3 mb-5">
+                        Manual testing remains an essential and widely-used testing approach to ensure software quality.
+                        It complements automated testing and is valuable for exploring the user experience and ensuring
+                        that the application functions as expected in various scenarios. Effective manual testing, when
+                        performed meticulously, can significantly contribute to delivering high-quality software
+                        products to end-users.
+                    </p>
+                </div>
+                <div class="col-md-4 mt-5 text-center">
+                    <img class=" mt-3"
+                        src="https://www.a2nacademy.com/front-end-web-development-course-with-react/assets/images/front-end-web-development-course-with-react.png"
+                        width="80%" height="65%" />
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-12">
-                <h3 class="text-container">Software Testing Certification and Training Courses</h3>
+            <div class="col-lg-1"></div>
+            <div class="col-lg-11">
+                <!-- <h3 class="text-container">Software Testing Certification and Training Courses</h3> -->
                 <h5><b>Overview</b></h5>
                 <p>Software Testing is the process of verifying and validating that a software program
                     or application meets the requirements and performs as expected. It is used to
@@ -129,117 +162,185 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3">
-                <div class="card">
-                    <img src="/img/img1.png" alt="" class="card-img-top">
-                    <p class="text-center m-2"><b>The 1-on-1 Advantage</b></p>
-                    <div class="hide">
-                        <div class="card-body">
-                            Get 1-on-1 session with our expert
-                            trainers at a date & time of your convenience
-                        </div>
+    <section>
+        <div class="container">
+            <div class="row mt-4 mb-5">
+                <div class="col-lg-3">
+                    <div class="card">
+                        <img src="/img/img1.png" alt="" class="card-img-top">
+                        <p class="text-center m-2"><b>Fully Hands-On IT Training</b></p>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-3">
-                <div class="card">
-                    <img src="/img/img2.png" alt="" class="card-img-top">
-                    <p class="text-center m-2"><b>Flexible Dates</b></p>
-                    <div class="hide">
-                        <div class="card-body">
-                            Start your session at a date of your
-                            choice-weekend & evening slots included,
-                            and reschedule if necessary.
-                        </div>
+                <div class="col-lg-3">
+                    <div class="card">
+                        <img src="/img/img2.png" alt="" class="card-img-top">
+                        <p class="text-center m-2"><b>30 to 40 Hours Live Project</b></p>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-3">
-                <div class="card">
-                    <img src="/img/img3.png" alt="" class="card-img-top">
-                    <p class="text-center m-2"><b>4-Hour Sessions</b></p>
-                    <div class="hide">
-                        <div class="card-body">
-                            Training never been so
-                            convenient-attend
-                            training sessions 4-hour
-                            long for easy learning.
-                        </div>
+                <div class="col-lg-3">
+                    <div class="card">
+                        <img src="/img/img3.png" alt="" class="card-img-top">
+                        <p class="text-center m-2"><b>Unlimited Interview Calls</b></p>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-3">
-                <div class="card">
-                    <img src="/img/img4.png" alt="" class="card-img-top">
-                    <p class="text-center m-2"><b>Destination Training</b></p>
-                    <div class="hide">
-                        <div class="card-body">
-                            Attend trainings at
-                            some of the most loved
-                            cities such as Dubai,
-                            London, Delhi(India),
-                            Goa, Singapore,
-                            New York and Sydney.
+                <div class="col-lg-3">
+                    <div class="card">
+                        <img src="/img/img4.png" alt="" class="card-img-top">
+                        <p class="text-center m-2"><b>100% Placements</b></p>
+                        <div class="hide">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <script src="index.js"></script>
+    </section>
 
-    <div class="container mt-5 mb-5" id="contact-form">
-        <form>
-            <h4 class="mt-4 mb-3" style="text-align: center;">Request More Information</h4>
-            <div class="row mb-5">
-                <div class="col-lg-6" id="contact-input">
-                    <input type="text" class="form-control" name="name" id="p1" placeholder="Name" />
-                    <input type="text" class="form-control" name="phone" id="p2" placeholder="Phone" />
-                    <input type="text" class="form-control" name="city" id="p3" placeholder="City (optional)" />
+    <section class="" style="background-color: #f5f5dc;">
+        <div class="Container">
+            <div class="row">
+                <h2 class="text-primary text-center mb-4 mt-4" style="font-weight: bold;">Manual Testing Course Syllabus</h2>
+                <div class="col-lg-2"></div>
+                <div class="col-lg-8 mb-5">
+                    <button class="accordion">Introduction to Software Testing</button>
+                    <div class="panel">
+                        <ol>
+                            <li>Overview of software testing and its importance in the software development lifecycle.</li>
+                            <li>Differentiating between verification and validation.</li>
+                        </ol>
+                    </div>
+                    <button class="accordion">Software Testing Fundamentals</button>
+                    <div class="panel">
+                        <ol>
+                            <li>Learning the basic concepts, terminologies, and objectives of manual testing.</li>
+                            <li>Understanding the roles and responsibilities of a manual tester. </li>
+                        </ol>
+                    </div>
+                    <button class="accordion">Software Development Life Cycle (SDLC) and Testing Life Cycle</button>
+                    <div class="panel">
+                        <ol>
+                            <li>Overiew of various SDLC models and their impact on testing. </li>
+                            <li>Understanding the phases of the testing life cycle, including test planning, test design, test execution, and test closure.</li>
+                        </ol>
+                    </div>
+                    <button class="accordion">Types of Manual Testing</button>
+                    <div class="panel">
+                        <ol>
+                            <li>Exploring different types of manual testing, such as functional, non-functional, regression, integration, and system testing.</li>
+                            <li>Understanding the purpose and scope of each type of testing.</li>
+                        </ol>
+                    </div>
+                    <button class="accordion">Test Case Design Techniques</button>
+                    <div class="panel">
+                        <ol>
+                            <li>Learning various test case design techniques, including boundary value analysis, equivalence partitioning, decision table testing, and more.</li>
+                            <li>Writing effective test cases with clear test steps and expected outcomes. </li>
+                        </ol>
+                    </div>
+                   <button class="accordion">Defect Reporting and Tracking</button>
+                    <div class="panel">
+                        <ol>
+                            <li>Understanding the defect life cycle.</li>
+                            <li>Learning how to log, track, and manage defects using bug tracking tools.</li>
+                        </ol>
+                    </div>          
+                    <button class="accordion">Test Execution and Test Reporting</button>
+                    <div class="panel">
+                        <ol>
+                            <li>Executing test cases and recording test results.</li>
+                            <li>Creating test summary reports and test metrics.</li>
+                        </ol>
+                    </div>
+                    <button class="accordion">Exploratory Testing</button>
+                    <div class="panel">
+                        <ol>
+                            <li>Understanding the concept of exploratory testing and when to apply it.</li>
+                            <li>Conducting exploratory testing sessions to uncover defects.</li>
+                        </ol>
+                    </div>
+                    <button class="accordion">User Interface (UI) Testing and Usability Testing</button>
+                    <div class="panel">
+                        <ol>
+                            <li>Verifying the application's visual appearance and user experience.</li>
+                            <li>Evaluating the software's user-friendliness and ease of use.</li>
+                        </ol>
+                    </div>
+                    <button class="accordion">Integration Testing and System Testing</button>
+                    <div class="panel">
+                        <ol>
+                            <li>Verifying the interaction between different components/modules.</li>
+                            <li>Testing the complete integrated system to assess its compliance with requirements.</li>
+                        </ol>
+                    </div>         
                 </div>
-                <div class="col-lg-6" id="contact-input">
-                    <input type="email" class="form-control" name="email" id="p4" placeholder="Email" />
-                    <input type="text" class="form-control" name="contry" id="p5" placeholder="India" />
-                    <textarea name="textarea" class="form-control"
-                        placeholder="Enter Query\ Your Requirement :"></textarea>
-                    <!-- <input type="checkbox" /> <label class="request"> Request a call back ?</label> <br> -->
-                    <!-- <div class="captcha">
-                        <div class="g-recaptcha" data-sitekey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"
-                            data-callback="onRecaptchaSuccess" data-expired-callback="onRecaptchaResponseExpiry"
-                            data-error-callback="onRecaptchaError">
-                        </div>
-                    </div> -->
-                </div>
-                <button id="submit-btn" class="btn btn-danger"
-                    onclick="sendEmail(); reset(); return false">Submit</button>
             </div>
-        </form>
-    </div>
-    <!-- Add custom JavaScript -->
-    <script>
-        function showDropdown() {
-            document.querySelector(".dropdown-menu").classList.add("show");
-        }
+        </div>
+    </section>
 
-        function hideDropdown() {
-            document.querySelector(".dropdown-menu").classList.remove("show");
-        }
-    </script>
+    <footer class="bg-dark">
+        <div class="row text-white fade-up-text">
+            <div class="col-lg-1"></div>
+            <div class="col-lg-3 mt-5 mb-5">
+                <div class="">
+                    <img src="/img/logo.svg" alt="technohub">
+                    <!-- <h5>Hello, this is the fading text!</h5> -->
+                </div>
+            </div>
+            <div class="col-lg-3 mt-5 mb-5">
+                <div class="">
+                    <h4>Site Map</h4>
+                    <ul id="site-map" style="list-style-type:none; margin: 0; padding: 0;">
+                        <li> <a href="#"> Home </a> </li>
+                        <li> <a href="#"> About us </a> </li>
+                        <li> <a href="#"> Contact us </a> </li>
+                        <li> <a href="#"> googleMap </a> </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-lg-4 mt-5 mb-5">
+                <div class="">
+                    <h4> Address</h4>
+                    <div class="each-line">
+                        <div>
+                            <img src="/img/marker.svg" alt="marker">
+                        </div>
+                        <p>
+                            1st floor, 80 Feet Rd, opposite Canara Bank,<br> MET Layout, Ashwath Nagar, <br>Sanjaynagar,
+                            Bengaluru-94.
+                        </p>
+                    </div>
+                    <div class="each-line">
+                        <div>
+                            <img src="/img/phone.svg" alt="phone">
+                        </div>
+                        <p>
+                            9849175588
+                        </p>
+                    </div>
+                    <div class="each-line">
+                        <div>
+                            <img src="/img/mail.svg" alt="mail">
+                        </div>
+                        <p>
+                            shameer@technohubtrainings.com
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+    <!-- navbar dropdown folder javascript -->
+    <script src="/js-folder/dropdown.js"></script>
+
+    <!-- accordian section javascript -->
+    <script src="/js-folder/accordian.js"></script>
+
+    <!-- footer section javascript -->
+    <script src="/js-folder/fadeup.js"></script>
 
     <!-- chatbot integration code  -->
-    <script type="text/javascript">
-        (function (d, m) {
-            var kommunicateSettings =
-                { "appId": "2f0e5b356f1971a9e9a576200fd6eda9b", "popupWidget": true, "automaticChatOpenOnNavigation": true };
-            var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
-            s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
-            var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
-            window.kommunicate = m; m._globals = kommunicateSettings;
-        })(document, window.kommunicate || {});
-/* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
-    </script>
+    <script src="/js-folder/chatbot.js"></script>
 
 </body>
 
